TECH-644: Use newest JVM settings for JDK 11 performances/stability (#1234)
* TECH-644: Use newest JVM setiings for JDK 11 performances/stability

* TECH-644: Use newest JVM setiings for JDK 11 performances/stability